--- a/src/main/resources/templates/km/customer/selectitem.html
+++ b/src/main/resources/templates/km/customer/selectitem.html
@@ -237,8 +237,8 @@
 
                                         <div id="reviews-container">
 
-                                            <a th:href="@{/customer/item/selectone.do(itemno=${item.ITEMNO}, tab=review, orderby=)}">최신순</a>
-                                            <a th:href="@{/customer/item/selectone.do(itemno=${item.ITEMNO}, tab=review, orderby=rating)}">평점순</a>
+                                            <a th:href="@{/customer/item/selectone.do(itemno=${item.ITEMNO}, tab=review, orderby=,page=1)}">최신순</a>
+                                            <a th:href="@{/customer/item/selectone.do(itemno=${item.ITEMNO}, tab=review, orderby=rating,page=1)}">평점순</a>
 
                                             <div th:text="|리뷰 전체 리스트 확인 : ${reviewList}|"></div>
                                             <div th:text="|페이지 총 개수 : ${pages}|"></div><hr>
@@ -260,12 +260,12 @@
                                             </th:block>
                                             
                                         </div>
+                                        <!-- <a th:href="@{/customer/item/selectone.do(itemno=${item.ITEMNO}, tab='review', orderby=${param.orderby}, page=1)}">가나다</a> -->
                                         <div id="pagination-container">
-                                            <!-- <th:block th:each="num : ${#numbers.sequence(1, pages)}">
-                                                <a th:href="@{/customer/item/selectone.do(itemno=${item.ITEMNO},tab=review,orderby=${param.orderby}))}"
+                                            <th:block th:each="num : ${#numbers.sequence(1, pages)}">
+                                                <a th:href="@{/customer/item/selectone.do(itemno=${item.ITEMNO}, tab='review', orderby=${param.orderby}, page=${num})}"
                                                     th:text="${num}"></a>
-                                                    <a href="">가나다라</a>
-                                            </th:block> -->
+                                            </th:block>
                                         </div>
 
 
